# Polis

./: .brooks-lint-history.json  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
.claude/: launch.json  (+1 more)
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0a1b2c3d4e5f_task_priority.py  23b806311f63_baseline_empty.py  31dfc5245d2f_plan_template_unique_name_version.py  38f12a115426_harden_rls_policies_nullif.py  3ffe8c94852b_app_role_and_rls_grants.py  4c9e4c3ad408_add_scene_category.py  6a7b8c9d0e1f_password_reset_token.py  7b8c9d0e1f2a_auth_rate_limit_bucket.py  8c9d0e1f2a3b_align_schema_drift.py  9a1b2c3d4e5f_result_envelope_blackboard.py  9d0e1f2a3b4c_v3_k1_definition_bundle.py  a1b2c3d4e5f6_bundle_dependency_trigger_optional.py  a2b3c4d5e6f7_asset_visibility_and_skill_embedding.py  a384baa396e7_add_domain_subcategory_to_plan_template.py  b2c3d4e5f6a7_v3_k1_scope_work_item.py  b3c4d5e6f7a8_task_entity.py  c3d4e5f6a7b8_v3_k2_approval_v2.py  c4d5e6f7a8b9_needs_review_status.py  d5e6f7a8b9c0_memory_promotion.py  e6f7a8b9c0d1_role_template.py  e7740a5badcb_merge_scene_category.py  f1a2b3c4d5e6_task_run_priority.py  f968dc6adc21_m1_full_schema.py
backend/scripts/a2/: generation_gate.py  goals_a2.json
backend/scripts/eval/: judge_cases.json  judge_regression_gate.py
backend/scripts/guardrails/: smoke.py
backend/scripts/m7/: acceptance_gate.py  goals.json  goals_b_stability.json
backend/scripts/mcp/: external_smoke.py  verify_external_smoke_evidence.py
backend/scripts/memory/: role_frequency_gate.py
backend/scripts/r4/: role_template_reuse_gate.py  seed_natural_reuse_smoke.py  seed_reuse_sample.py
backend/scripts/s2_s3/: stability_regression_gate.py
backend/scripts/tei/: offline_model_gate.py
backend/src/polis/: __init__.py  config.py  main.py  seed.py
backend/tests/: conftest.py  test_agent_loop.py  test_auth_rate_limit.py  test_capability_dedup.py  test_config_prod.py  test_credential.py  test_embed_backfill.py  test_evaluator.py  test_guardrails.py  test_guardrails_smoke.py  test_health.py  test_integration_approval.py  test_integration_attachment_runtime.py  test_integration_attachments.py  test_integration_audit.py  test_integration_auth_lifecycle.py  test_integration_blackboard.py  test_integration_catalog.py  test_integration_composer.py  test_integration_concurrency.py  test_integration_cost_pick.py  test_integration_credential.py  test_integration_dashboard.py  test_integration_escalate.py  test_integration_execute.py  test_integration_export.py  test_integration_identity.py  test_integration_manifest.py  test_integration_memory_api.py  test_integration_memory_decay.py  test_integration_memory_e2e.py  test_integration_memory_promote.py  test_integration_memory_repo.py  test_integration_memory_retrieve.py  test_integration_memory_write.py  test_integration_observability.py  test_integration_orgctx.py  test_integration_orgmgmt.py  test_integration_plan.py  test_integration_provision.py  (+32 more)
backend/tests/fixtures/: mcp_stdio_test_server.py  (+1 more)
(+227 files in other folders)
