[project]
name = "polis"
version = "0.1.0"
description = "Polis — 多 Agent 协同平台（后端，FastAPI modular monolith）"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "pgvector>=0.4.2",
    "argon2-cffi>=25.1.0",
    "pyjwt>=2.9",
    "email-validator>=2.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "httpx>=0.27",
    "testcontainers>=4.0",
    "psycopg2-binary>=2.9.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polis"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Alembic 迁移：保留 op/sa import 供 autogenerate；长 SQL/列定义行不强制换行
"migrations/versions/*" = ["F401", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
